--- a/templates/account_preferences.html
+++ b/templates/account_preferences.html
@@ -12,7 +12,7 @@
     <input type="text" name="zipcode" id="zipcode" value="{{zipcode}}"> <br>
     <label for="phone">Phone number: </label> <br>
     <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{phone}}" > <br>
-    <p>Phone numbers should be in the format 555-555-5555</p>
+    <small>Phone numbers should be in the format 555-555-5555</small><br>
     <input type="submit">
 </form>
 <h2>Change Password</h2>
