--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,7 +10,7 @@
     <input type="submit">
 </form>
 <div class="anchors">
-    <a href="/new-account">Want to customize your walking weather and more? Make an account!</a>
+    <p>Want to customize your walking weather and more? <a href="/new-account">Make an account!</a></p>
 </div>
 <div class="weather">
 </div>
