Fixed typo in checklist end

--- a/templates/checklist_end.html
+++ b/templates/checklist_end.html
@@ -4,7 +4,7 @@
 {% block body %}
 <h1>So Everything Still Feels Bad?</h1>
     <h2>Here are a few more things to think about/try:</h2>
-        <h3>Try taking a few deep breathes.</h3>
+        <h3>Try taking a few deep breaths.</h3>
             <p>Being uncomfortable often makes us hold our breathe. Try breathing conciously for a few minutes.</p>
         <h3>If it's daytime and you haven't gotten dressed, try putting on some clothes.</h3>
             <p>Sometimes dressing up as though you feel better, can help make it so.</p>
