Fixed typo in checklist end

--- a/templates/checklist_end.html
+++ b/templates/checklist_end.html
@@ -5,7 +5,7 @@
 <h1>So Everything Still Feels Bad?</h1>
     <h2>Here are a few more things to think about/try:</h2>
         <h3>Try taking a few deep breaths.</h3>
-            <p>Being uncomfortable often makes us hold our breathe. Try breathing conciously for a few minutes.</p>
+            <p>Being uncomfortable often makes us hold our breath. Try breathing conciously for a few minutes.</p>
         <h3>If it's daytime and you haven't gotten dressed, try putting on some clothes.</h3>
             <p>Sometimes dressing up as though you feel better, can help make it so.</p>
             <h4>Relatedly, even if you are already dressed, you can consider changing into clothes that make you
